chore: redirect to coming soon page

--- a/index.html
+++ b/index.html
@@ -1182,6 +1182,9 @@
     </footer>
 
     <script>
+           window.onload = function() {
+            window.location.href = "comingsoon.html";
+        };
         const storySlides = [
             { image: 'Award.jpeg', caption: 'Opening Ceremony of EVOGEN 13.0' },
             { image: 'code.jpeg', caption: 'Coding Event' },
