fix: update social media links in coming soon page

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -309,13 +309,15 @@
       </p>
 
       <div class="social-links">
-        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+        <!-- <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a> -->
         <a
           href="https://www.instagram.com/gcc_bca?utm_source=qr&igsh=Z2x3ZHR4dWhmbmpr"
           class="social-link"
           ><i class="fab fa-instagram"></i
         ></a>
-        <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/@gccbca2574" class="social-link"
+          ><i class="fab fa-youtube"></i
+        ></a>
       </div>
     </div>
 
