Changes in features

--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
             {
                 icon: 'fas fa-film',
                 title: 'Vishwakarma’s ShilpVerse',
-                tagline: '',
+                tagline: 'Where ancient artistry meets modern creativity',
                 description: 'Step into the grand forge of srishti and embrace the legacy of Vishwakarma, the celestial architect. Like his masterpieces- Swargaloka, Pushpaka Vimana, and Dwarka, design a digital masterpiece that bridges ancient wisdom with modern technology. This event challenges to  blend UI/UX design and content creation for crafting futuristic apps and websites, inspired by India’s rich artistic heritage. Bring your creation to life with compelling stories, videos and building a digital mahal that reflects extraordinary craftsmanship.',
                 posterImage: '',
                 participants: [
@@ -1315,12 +1315,12 @@
                 faculty: [
                  {
                   name: 'Prof. Vaishali Kulkarni',
-                  role: 'Cybersecurity event coordinator',
+                  role: 'Designing and Content Creation event coordinator',
                   image: 'path/to/faculty1.jpg'
                  },
                  {
                   name: 'Miss. Aniketa Kulkarni',
-                  role: 'Cybersecurity event coordinator',
+                  role: 'Designing and Content Creation event coordinator',
                   image: 'path/to/faculty2.jpg'
                  },
                 ],
@@ -1338,6 +1338,7 @@
             {
                 icon: 'fas fa-comments', //fas fa-user-tie
                 title: 'Chanakya’s VakyaNeeti',
+                tagline: 'Where strategy meets speech, and influence rules the market',
                 description: 'Inspired by Acharya Chanakya’s wisdom in Rajaneeti and Vak-Chaturya, this event challenges participants to master the art of Samvaad and Vikraya-Kaushalya. From crafting compelling digital narratives to executing strategic campaigns, competitors must blend creativity with Yukti and Buddhi to outshine their rivals.',
                 posterImage: '',
                 participants: [
@@ -1381,9 +1382,9 @@
                 ],
             },
             {
-                icon: 'fas fa-question-circle',
+                icon: 'fas fa-user-tie',
                 title: 'Ashoka’s Edict quest',
-                tagline:'',
+                tagline:'Unveil the past, Conquer the knowledge!',
                 description: 'Are you a Tathya Premi or someone who craves a challenge? Get ready for an experience packed with Romancha, Adhyayana, and Puraskara that are truly worth the fight, in Ashoka’s Edict Quest. Sharpen your minds, rise to the occasion, and prepare to dominate the Buddhi Yuddha — the ultimate battle of wisdom and wit.',
                 posterImage: '',
                 participants: [
@@ -1391,51 +1392,79 @@
                 ],
                 requirements: [
                  'Laptop',
-                 'Pendrive',
-                 'Smartphone',
-                 'Earphone'
+                 'Mobile'
                 ],
                 skills: [
-                 'Figma',
-                 'Canva',
-                 'Photoshop',
-                 'Premier Pro',
-                 'Blender',
-                 'Illustrator'
+                 'Time Management',
+                 'Strategic Guessing',
+                 'Logical Thinking',
+                 'Memory and Retention',
                 ],
                 faculty: [
                  {
-                  name: 'Prof. Vaishali Kulkarni',
-                  role: 'Cybersecurity event coordinator',
+                  name: 'Prof.Rucha Bapat',
+                  role: 'Best Manager event coordinator',
                   image: 'path/to/faculty1.jpg'
                  },
                  {
-                  name: 'Miss. Aniketa Kulkarni',
-                  role: 'Cybersecurity event coordinator',
+                  name: 'Meghana Joshi',
+                  role: 'Best Manager event coordinator',
                   image: 'path/to/faculty2.jpg'
                  },
                 ],
                 eventHeads: [
                  {
-                  name: 'Prajwal Kulkarni',
-                  contact: '8722336396'
+                  name: 'Vedant Kulkarni',
+                  contact: '9110235859'
                  },
                  {
-                  name: 'Sanjana Choudhari',
-                  contact: '7899328259'
+                  name: 'Tanushree Mulimani',
+                  contact: '9036615638'
                  }
                 ],
             },
             {
                 icon: 'fas fa-chart-line',
                 title: 'Varahmihira’s Data Nexus',
+                tagline: 'Decode ancient wisdom, analyze cosmic patterns, and predict the digital future.',
                 description: 'The Varahmihira’s Data Nexus sets the stage for a battle of intellect, where the spirit of Varahmihira inspires participants to embark on a journey of discovery. In this battle where analytical minds, data wizards, and machine learning pioneers compete, decode patterns, and discover hidden knowledge to claim the title of Kalki of Machine Learning.',
-                backgroundImage: 'path/to/background/image.jpg',
-                facultyImages: [
-                'path/to/faculty1.jpg',
-                'path/to/faculty2.jpg',
-                'path/to/faculty3.jpg',
-                ]
+                posterImage: '',
+                participants: [
+                 '1 Student',
+                ],
+                requirements: [
+                 'Laptop',
+                 'Mobile'
+                ],
+                skills: [
+                 'SQL',
+                 'PowerBi',
+                 'Tableau',
+                 'R Programming',
+                 'Python',
+                ],
+                faculty: [
+                 {
+                  name: 'Prof. Vaibhav Ambekar',
+                  role: 'Data Analytics and Machine Learning event coordinator',
+                  image: 'path/to/faculty1.jpg'
+                 },
+                 {
+                  name: 'Vaishnavi Galagali',
+                  role: 'Data Analytics and Machine Learning event coordinator',
+                  image: 'path/to/faculty2.jpg'
+                 },
+                ],
+                eventHeads: [
+                 {
+                  name: 'James Fernandes',
+                  contact: '8669727820'
+                 },
+                 {
+                  name: 'Kavya Raikar',
+                  contact: '8088252547'
+                 }
+                ],
             }
         ];
 
