--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,8 @@
             <p class="hero-description">"E V O L V I N G  G E N E R A T I O N S."</p>
             <div class="cta-buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJESfzg4SabVxLs3Pc6UnAojB2OMvj1PL0yXcWuzll7LnnIg/viewform"><button class="cta-btn primary-btn">Register Now</button></a>
-                <a href="final.pdf" download="Brochure.pdf"> <button class="cta-btn secondary-btn" >Download Brochure</button></a>
+                <a href="ztr.pdf" download="ztr.pdf
+                "> <button class="cta-btn secondary-btn" >Download Brochure</button></a>
             </div>
         </div>
     </section>
@@ -1674,7 +1675,7 @@
             {
                 name: 'Dr. Venugopal Jalihal',
                 role: 'Principal',
-                image: 'v.jpeg',
+                image: 'https://res.cloudinary.com/dmw8b1n3r/image/upload/v1742982308/v_bjhshh.jpg',
                 //bio: 'Head of the evogen event.'
             },
             {
@@ -1686,7 +1687,7 @@
             {
                 name: 'Shri. A. K. Tagare',
                 role: 'Chairman, GC on GCC',
-                image: 'Shri.-A.K.Tagare.jpeg',
+                image: 'https://res.cloudinary.com/dmw8b1n3r/image/upload/v1742981902/Shri.-A.K.Tagare_ad70ux.jpg',
                // bio: 'Head of the evogen event.'
             }
         ];
