LinkedIn profile added

--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                 © 2025 EVOGEN 14.0. All Rights Reserved.
             </p>
             <p class="developer">
-                Designed & Developed by <a href="#">Varad Bandekar</a>
+                Designed & Developed by <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAAEpJr80BdxPJICPRnlG9dGp36LSfDUTDn6g&keywords=varad%20bandekar&origin=RICH_QUERY_SUGGESTION&position=2&searchId=70c15282-49e9-4a26-b18a-70eded5f526a&sid=rkI&spellCorrectionEnabled=false">Varad Bandekar</a>
             </p>
         </div>
     </footer>
