Tagline size increased

--- a/index.html
+++ b/index.html
@@ -2068,6 +2068,7 @@
             color: #888;
             font-style: italic;
             margin-bottom: 20px;
+            font-size: 1.5rem;
           }
           
           .modal-body section {
