Vedio container added

--- a/index.html
+++ b/index.html
@@ -1183,6 +1183,16 @@
         
                 </div>
             </div>
+            <!-- Added video element -->
+            <video 
+            class="story-video" 
+            src="https://res.cloudinary.com/dmw8b1n3r/video/upload/v1743072810/evogen1.4_wsjsvi.mp4" 
+            controls 
+            style="width: 100%; height: auto; max-width: 100%;"
+            >
+            Your browser does not support the video tag.
+            </video>
+           
         </div>
     </section>
 
