--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
                 ],
                 faculty: [
                  {
-                  name: 'Prof.Govind .V.Huligol',
+                  name: 'Prof.Govind .V.Huilgol',
                   role: 'Coding Event Coordinator',
                   image: 'Govind V Huilgol.jpg'
                  },
@@ -1584,11 +1584,11 @@
                 ],
                 eventHeads: [
                  {
-                  name: 'Prajwal Kulkarni',
+                  name: 'Mr. Prasad Kurdekar',
                   contact: '8722336396'
                  },
                  {
-                  name: 'Sanjana Choudhari',
+                  name: 'Ms. Snehal Pilankar',
                   contact: '7899328259'
                  }
                 ],
