Pic uploaded dev

--- a/index.html
+++ b/index.html
@@ -1734,7 +1734,7 @@
             {
                 name: 'Varad Bandekar',
                 role: 'Lead Developer',
-                image: 'evogen_14/WhatsApp Image 2025-03-28 at 11.52.14.jpeg',
+                image: 'WhatsApp Image 2025-03-28 at 11.52.14.jpeg',
                 bio: 'Full-stack developer with intrest in web technologies and UI/UX design.'
             }
         ];
