Data Analytics requirements changed

--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
                     </div>
                     <div class="contact-text">
                         Department of Bachelor of Computer Applications,<br>
-                        GOGTE Campus, City Pin - 960003
+                        GOGTE Campus, City Pin - 590006
                     </div>
                 </div>
                 <div class="contact-info">
@@ -1642,7 +1642,7 @@
                 ],
                 requirements: [
                  'Laptop',
-                 'Mobile'
+                 'Pendrive'
                 ],
                 skills: [
                  'SQL',
@@ -1650,7 +1650,9 @@
                  'Tableau',
                  'R Programming',
                  'Python',
-                 'SPSS'
+                 'SPSS',
+                 'Machine Learning',
+                 
                 ],
                 faculty: [
                  {
